2010-03-20  Ethan A Merritt  <merritt@u.washington.edu

	* NEWS src/hidden3d.c src/plot3d.c src/graph3d.c docs/gnuplot.doc:

	Add support for 'with impulses' in hidden3d code.  Previously the manual
	said 3D impulses were drawn "from the xy plane" but the code did not
	follow this, drawing instead from zmin.  Now the 3D code always draws
	impulses from z=0 just as the 2D code always draws from y=0.

2010-03-18  Ethan A Merritt  <merritt@u.washington.edu

	* docs/gnuplot.doc:  Add index entries and update description of mouse
	scrolling and hotkeys.

2010-03-17  Ethan A Merritt  <merritt@u.washington.edu

	* plot.c (main): Initialize c_token to a legal value at the start of
	interactive input.

	* docs/gnuplot.doc src/set.c src/term_api.h src/wxterminal/wxt_gui.cpp
	src/wxterminal/wxt_term.h term/cairo.trm term/emf.trm term/gd.trm
	term/pdf.trm term/post.h term/post.trm term/wxt.trm:

	New terminal option "fontscale <scale>".  This scale factor is applied
	to the nominal font size before use, so that you can scale the font 
	size up or down in parallel with scaling the output page up or down.
	This is mostly relevant for hardcopy output or embedded figures.

2010-03-14  Ethan A Merritt  <merritt@u.washington.edu

	* INSTALL config/README config/makefile.amg config/makefile.ami
	config/makefile.dj2 config/makefile.unx config/term_pc.h configure.in
	docs/Makefile.in docs/README docs/gnuplot.doc src/Makefile.am
	src/Makefile.maint src/amiga.c src/command.c src/command.h src/graph3d.c
	src/graphics.c src/graphics.h src/makefile.all src/makefile.awc
	src/plot.c src/scanner.c src/stdfn.c src/stdfn.h src/syscfg.h src/term.c
	src/term.h src/variable.c term/amiga.trm:

	Remove code specific to amiga platforms. 
	30 files changed, 43 insertions(+), 1941 deletions(-)

	* config/makefile.dj2 config/makefile.unx config/term_pc.h
	configure.in docs/doc2texi.el src/eval.c src/eval.h src/makefile.all
	src/makefile.awc src/plot.c src/syscfg.h src/term.c src/term.h